--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-    
+    <main>
+        <section class="telefone">
+
+        </section>
+        <section class="redes_sociais">
+
+        </section>
+    </main>
 </body>
 </html>
