--- a/index.html
+++ b/index.html
@@ -10,10 +10,17 @@
 <body>
     <main>
         <section class="telefone">
-            <iframe src="home.html" name="tela" class="tela" frameborder="0"></iframe>
+            <iframe src="home.html" name="tela" class="tela" frameborder="0">
+                <p>Seu navegador não suporta este elemento.</p>
+            </iframe>
         </section>
         <section class="redes_sociais">
-
+            <a href="#" target="tela"><img src="imagens/logo-home.jpg" alt="home"></a>
+            <a href="#" target="tela"></a>
+            <a href="#" target="tela"></a>
+            <a href="#" target="tela"></a>
+            <a href="#" target="tela"></a>
+            <a href="#" target="tela"></a>
         </section>
     </main>
 </body>
