--- a/index.html
+++ b/index.html
@@ -15,12 +15,11 @@
             </iframe>
         </section>
         <section class="redes_sociais">
-            <a href="#" target="tela"><img src="imagens/logo-home.jpg" alt="home"></a>
-            <a href="#" target="tela"></a>
-            <a href="#" target="tela"></a>
-            <a href="#" target="tela"></a>
-            <a href="#" target="tela"></a>
-            <a href="#" target="tela"></a>
+            <a href="#" target="tela"><img src="imagens/logo-home.jpg" alt="Home"></a><br>
+            <a href="#"><img src="imagens/logo-github.jpg" alt="Github"></a><br>
+            <a href="#" target="tela"><img src="imagens/logo-instagram.jpg" alt="Instagram"></a><br>
+            <a href="#" target="tela"><img src="imagens/logo-facebook.jpg" alt="Facebook"></a><br>
+            <a href="#" target="tela"><img src="imagens/logo-twitter.jpg" alt="Twitter"></a>
         </section>
     </main>
 </body>
