--- a/index.html
+++ b/index.html
@@ -10,15 +10,19 @@
 <body>
     <main>
         <section class="telefone">
-            <iframe src="home.html" name="tela" class="tela" frameborder="0">
+            <iframe src="paginas/home.html" name="tela" class="tela" frameborder="0">
                 <p>Seu navegador não suporta este elemento.</p>
             </iframe>
         </section>
         <section class="redes_sociais">
-            <a href="#" target="tela"><img src="imagens/logo-home.jpg" alt="Home"></a><br>
-            <a href="#"><img src="imagens/logo-github.jpg" alt="Github"></a><br>
-            <a href="#" target="tela"><img src="imagens/logo-instagram.jpg" alt="Instagram"></a><br>
+            <a href="paginas/home.html" target="tela"><img src="imagens/logo-home.jpg" alt="Home"></a><br>
+
+            <a href="paginas/github.html" target="tela"><img src="imagens/logo-github.jpg" alt="Github"></a><br>
+            
+            <a href="paginas/instagram.html" target="tela"><img src="imagens/logo-instagram.jpg" alt="Instagram"></a><br>
+
             <a href="#" target="tela"><img src="imagens/logo-facebook.jpg" alt="Facebook"></a><br>
+
             <a href="#" target="tela"><img src="imagens/logo-twitter.jpg" alt="Twitter"></a>
         </section>
     </main>
