--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
             
             <a href="paginas/instagram.html" target="tela"><img src="imagens/logo-instagram.jpg" alt="Instagram"></a><br>
 
-            <a href="#" target="tela"><img src="imagens/logo-facebook.jpg" alt="Facebook"></a><br>
+            <a href="paginas/facebook.html" target="tela"><img src="imagens/logo-facebook.jpg" alt="Facebook"></a><br>
 
-            <a href="#" target="tela"><img src="imagens/logo-twitter.jpg" alt="Twitter"></a>
+            <a href="paginas/twitter.html" target="tela"><img src="imagens/logo-twitter.jpg" alt="Twitter"></a>
         </section>
     </main>
 </body>
