--- a/paginas/twitter.html
+++ b/paginas/twitter.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Facebook</title>
+    <title>Twitter</title>
     <link rel="stylesheet" href="../style/sociais.css">
 </head>
 <body>
     <main>
         <section>
-            <img src="../imagens/tela-facebook.jpg" alt="Facebook">
+            <img src="../imagens/logo-twitter.jpg" alt="Twitter">
             <a href="https://www.facebook.com/celson.paz" target="_blank">Acesse</a>
         </section>
     </main>
