--- a/paginas/facebook.html
+++ b/paginas/facebook.html
@@ -9,8 +9,8 @@
 <body>
     <main>
         <section>
-            <img src="../imagens/tela-facebook.jpg" alt="Facebook">
-            <a href="https://www.facebook.com/celson.paz" target="_blank">Acesse</a>
+            <img src="../imagens/facebook.png" alt="Facebook">
+            <a href="https://www.facebook.com/celson.paz.9/" target="_blank">Acesse</a>
         </section>
     </main>
 </body>
