--- a/paginas/github.html
+++ b/paginas/github.html
@@ -9,7 +9,7 @@
 <body>
     <main>
         <section>
-            <img src="../imagens/tela-github.jpg" alt="Github">
+            <img src="../imagens/github.png" alt="Github">
             <a href="https://github.com/CelsonPaz" target="_blank">Acesse</a>
         </section>
     </main>
