--- a/paginas/instagram.html
+++ b/paginas/instagram.html
@@ -9,7 +9,7 @@
 <body>
     <main>
         <section>
-            <img src="../imagens/tela-instagram.jpg" alt="Instagram">
+            <img src="../imagens/instagram.png" alt="Instagram">
             <a href="https://www.instagram.com/celson_paz/" target="_blank">Acesse</a>
         </section>
     </main>
